fix: section overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1681,7 +1681,7 @@ img {
 
 .overlay::before {
     content: '';
-    z-index: 4;
+    z-index: 3;
     width: 22%;
     height: 60%;
     display: block;
